specs/blueprints/errors/parsing/unterminated_escaped_key.eno
# A single field with an terminated escaped key

-- input
`field: value
-- input

## ParseError

-- text
In line 1 the key of an element is escaped, but the escape sequence is not terminated until the end of the line.
-- text

-- snippet
   Line | Content
 >    1 | `field: value
-- snippet

selection: [0,1] => [0,13]